# stackmanager

./: .gitignore  README.md  package-lock.json  package.json
src/: App.css  App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: composer.rs  database.rs  downloader.rs  filesystem.rs  hosts.rs  main.rs  process_manager.rs  proxy.rs  shim.rs  store.rs  terminal.rs
src/api/: serviceControl.ts
